--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,8 @@
     "@strapi/plugin-users-permissions": "4.3.2",
     "@strapi/strapi": "4.3.2",
     "better-sqlite3": "7.4.6",
+    "pg": "^8.7.3",
+    "pg-connection-string": "^2.5.0",
     "strapi-plugin-populate-deep": "^0.1.2"
   },
   "author": {
