added checkout page

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,11 +13,14 @@
     "lintfix": "prettier --write --list-different . && yarn lint:js --fix"
   },
   "dependencies": {
+    "@adapttive/vue-markdown": "^4.0.1",
     "@nuxt/http": "^0.6.4",
     "cookieparser": "^0.1.0",
     "core-js": "^3.19.3",
     "js-cookie": "^3.0.1",
     "nuxt": "^2.15.8",
+    "sass": "^1.54.4",
+    "sass-loader": "10",
     "vue": "^2.6.14",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
@@ -33,6 +36,8 @@
     "eslint-plugin-nuxt": "^3.1.0",
     "eslint-plugin-vue": "^8.2.0",
     "postcss": "^8.4.4",
-    "prettier": "^2.5.1"
+    "prettier": "^2.5.1",
+    "pug": "^3.0.2",
+    "pug-plain-loader": "^1.1.0"
   }
 }
